syntax = "proto3";

option java_package = "com.iquantex.ts.cre.data.process.message.protobuf";

option java_outer_classname = "REDataCommon";

message Rating {
    // 评级发布时间
    int64 time = 1;
    // 评级结果
    string rating = 2;
    // 评级结果权重（用于比较评级结果）
    int32 weight = 3;
}

message ExternalRating {
    // 父类对象
    Rating parent = 1;
    // 评级机构
    string party = 2;
    // 是否证监会认可评级机构
    bool isCSRCRecoed = 3;
    // 是否交易商协会认可评级机构
    bool isNAFMIIRecoed = 4;
    // 是否发改委认可评级机构
    bool isNDRCRecoed = 5;
}

message InternalRating {
    // 父类对象
    Rating parent = 1;
}
